--- a/home/wrenchcaptain/somnium/imports/plugins/custom/somnium-master/client/templates/static/home.html
+++ b/home/wrenchcaptain/somnium/imports/plugins/custom/somnium-master/client/templates/static/home.html
@@ -23,7 +23,7 @@
                         <div class="img_block">
                             <img src="/resources/images/homepage_photocollage/springs_390x290.png" class="img_box" alt="">
                             <div class="capture short">
-                                <h3>OUR SPRINGS ONLY HAVE MOVES <br>FOR YOU YO</h3>
+                                <h3>OUR SPRINGS ONLY HAVE MOVES <br>FOR YOU</h3>
                                 <p>Our springs were designed to cradle and support your body while you dream - and to eliminate any motion-transfer that might get in the way.</p>
                                 <div>
                                     <a href="/ourmattress" class="link2">read more</a>
