--- a/imports/plugins/custom/somnium-master/client/templates/static/retailers.html
+++ b/imports/plugins/custom/somnium-master/client/templates/static/retailers.html
@@ -188,7 +188,8 @@
                         <!-- <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d12642639.157522704!2d-99.4882421875!3d39.320401513453284!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!5e0!3m2!1sen!2sus!4v1442449623383" width="800" height="500" frameborder="0" style="border:solid 1px #29baff;display:inline-block;" allowfullscreen></iframe> -->
 
 												<!-- <iframe src="https://www.google.com/maps/d/u/1/embed?mid=1L3Lt_swR7AwN1o17n57IA0fmawM" style="width:100%;height:500px;"></iframe> -->
-												<p><iframe src="//batchgeo.com/map/58d0912200bf0a46c2ec20fad87fd09b" frameborder="0" width="100%" height="550" style="border:1px solid #aaa;"></iframe></p><p><small>View <a href="https://batchgeo.com/map/58d0912200bf0a46c2ec20fad87fd09b">Somnium Locations</a> in a full screen map</small></p>												<!-- <div id="map" style="height:100%;"></div>
+												<!-- <p><iframe src="//batchgeo.com/map/58d0912200bf0a46c2ec20fad87fd09b" frameborder="0" width="100%" height="550" style="border:1px solid #aaa;"></iframe></p><p><small>View <a href="https://batchgeo.com/map/58d0912200bf0a46c2ec20fad87fd09b">Somnium Locations</a> in a full screen map</small></p> -->
+												<p><iframe src="//batchgeo.com/map/6cb22115996a37c8fe66c523c624e396" frameborder="0" width="100%" height="550" style="border:1px solid #aaa;"></iframe></p><p><small>View <a href="https://batchgeo.com/map/6cb22115996a37c8fe66c523c624e396">Somnium Locations</a> in a full screen map</small></p>												<!-- <div id="map" style="height:100%;"></div>
 										    <script>
 										      function initMap() {
 										        // Styles a map in night mode.
