updated policy settings and admin setup in header

--- a/imports/plugins/custom/somnium-master/client/templates/layouts/core.html
+++ b/imports/plugins/custom/somnium-master/client/templates/layouts/core.html
@@ -13,14 +13,22 @@
       {{>cartDrawer}}
     </nav>
 
-  <main role="main" id="main">
-    <span id="layout-alerts">{{> inlineAlerts}}</span>
-    <!-- {{#if hasPermission 'guest'}} -->
-      <!-- begin template region -->
-      {{> Template.dynamic template=template}}
-      <!-- {{> home}} -->
-      <!-- end template region -->
-    <!-- {{/if}} -->
+    <main role="main" id="main" class="somnium-instance-dpv-949943874785">
+      <span id="layout-alerts">{{> inlineAlerts}}</span>
+      <div class="container" style="height:140px;text-align:center;padding-top:0px;width:100%;background:#fff;">
+          <div class="row" style="margin-bottom:50px;">
+                  <div class="big_logo">
+                  <img src="/resources/images/somnium_headerlogo2.png" alt="" style="max-width:80%;margin-top:-25px;">
+                  </div>
+          </div>
+      </div>
+      <div class="clear"></div>
+      <!-- {{#if hasPermission 'guest'}} -->
+        <!-- begin template region -->
+        {{> Template.dynamic template=template}}
+        <!-- {{> home}} -->
+        <!-- end template region -->
+      <!-- {{/if}} -->
 
     <footer class="reaction-navigation-footer footer-default">
       {{> Template.dynamic template=layoutFooter}}
