--- a/imports/plugins/custom/somnium-master/client/templates/layouts/footer.html
+++ b/imports/plugins/custom/somnium-master/client/templates/layouts/footer.html
@@ -33,9 +33,9 @@
                     <h3>We're Social</h3>
                     <br>
                 	<ul class="socials2">
-                    	<li><a href="http://twitter.com/Somniumbeds" target="_blank"><i class="fa fa-twitter"></i></a></li>
-                    	<li><a href="http://www.houzz.com/pro/somnium/somnium" target="_blank"><i class="fa fa-houzz"></i></a></li>
-                        <li><a href="http://www.facebook.com/pages/Somnium/37545481105" target="_blank"><i class="fa fa-facebook"></i></a></li>
+                    	<li><a href="https://twitter.com/Somniumbeds" target="_blank"><i class="fa fa-twitter"></i></a></li>
+                    	<li><a href="https://www.houzz.com/pro/somnium/somnium" target="_blank"><i class="fa fa-houzz"></i></a></li>
+                        <li><a href="https://www.facebook.com/pages/Somnium/37545481105" target="_blank"><i class="fa fa-facebook"></i></a></li>
                     	<li><a href="https://uk.pinterest.com/somniumbeds/" target="_blank"><i class="fa fa-pinterest-p"></i></a></li>
                 	</ul>
                   <br>
