--- a/imports/plugins/custom/somnium-master/client/templates/layouts/header.html
+++ b/imports/plugins/custom/somnium-master/client/templates/layouts/header.html
@@ -10,7 +10,7 @@
             <img src="/resources/spring_header50x50_3.png" />
           </a>
         </div>
-        <!-- <div class="navbar-accounts navbar-somnium-item">{{> accounts tpl="loginDropdown"}}</div> -->
+        <div class="navbar-accounts navbar-somnium-item">{{> accounts tpl="loginDropdown"}}</div>
 
       </div>
       <div class="mobilemenu">
